--- a/index.html
+++ b/index.html
@@ -1,105 +1,199 @@
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 600" width="800" height="600">
-  <!-- MARGINS: 2.5cm equivalent padding -->
-  <rect x="0" y="0" width="800" height="600" fill="white"/>
-  
-  <!-- SECTION CUT INDICATORS -->
-  <line x1="40" y1="80" x2="40" y2="520" stroke="black" stroke-width="1.4" stroke-dasharray="8,4"/>
-  <polygon points="35,85 40,75 45,85" fill="black"/>
-  <polygon points="35,515 40,525 45,515" fill="black"/>
-  <text x="40" y="65" font-family="Times New Roman" font-size="12" text-anchor="middle" font-weight="bold">A</text>
-  <text x="40" y="540" font-family="Times New Roman" font-size="12" text-anchor="middle" font-weight="bold">A</text>
-  
-  <!-- FEMALE SLOT (LEFT) - GALVANIZED STEEL BODY -->
-  <!-- 45° cross-hatching for steel body -->
-  <defs>
-    <pattern id="steel-hatch" patternUnits="userSpaceOnUse" width="4" height="4" patternTransform="rotate(45)">
-      <line x1="0" y1="0" x2="0" y2="4" stroke="black" stroke-width="0.15"/>
-    </pattern>
-    <pattern id="tfe-hatch" patternUnits="userSpaceOnUse" width="2" height="2" patternTransform="rotate(30)">
-      <line x1="0" y1="0" x2="0" y2="2" stroke="black" stroke-width="0.15"/>
-    </pattern>
-    <pattern id="epdm-hatch" patternUnits="userSpaceOnUse" width="3" height="3" patternTransform="rotate(60)">
-      <line x1="0" y1="0" x2="0" y2="3" stroke="black" stroke-width="0.15"/>
-    </pattern>
-    <pattern id="pin-hatch" patternUnits="userSpaceOnUse" width="5" height="5">
-      <line x1="0" y1="0" x2="5" y2="5" stroke="black" stroke-width="0.15"/>
-      <line x1="5" y1="0" x2="0" y2="5" stroke="black" stroke-width="0.15"/>
-    </pattern>
-  </defs>
-  
-  <!-- Female slot outer profile -->
-  <path d="M 120 150 L 280 150 L 280 450 L 120 450 Z" fill="url(#steel-hatch)" stroke="black" stroke-width="0.5"/>
-  
-  <!-- TFE LABYRINTH SEAL (0.5mm) - tortuous path with 3 chambers -->
-  <path d="M 280 180 L 310 180 L 310 200 L 295 200 L 295 220 L 310 220 L 310 240 L 280 240 Z" fill="url(#tfe-hatch)" stroke="black" stroke-width="0.3"/>
-  <path d="M 280 260 L 310 260 L 310 280 L 295 280 L 295 300 L 310 300 L 310 320 L 280 320 Z" fill="url(#tfe-hatch)" stroke="black" stroke-width="0.3"/>
-  <path d="M 280 340 L 310 340 L 310 360 L 295 360 L 295 380 L 310 380 L 310 400 L 280 400 Z" fill="url(#tfe-hatch)" stroke="black" stroke-width="0.3"/>
-  
-  <!-- Spring pin groove (semi-cylindrical) -->
-  <path d="M 280 295 A 0.6 0.6 0 0 1 280 305" fill="none" stroke="black" stroke-width="0.3" stroke-dasharray="2,1"/>
-  
-  <!-- MALE DOVETAIL (RIGHT) - GALVANIZED STEEL BODY -->
-  <!-- Taper angle 1.5° calculation: over 300mm height, offset = tan(1.5°)*300 ≈ 7.86mm -->
-  <path d="M 520 150 L 680 157.86 L 680 442.14 L 520 450 Z" fill="url(#steel-hatch)" stroke="black" stroke-width="0.5"/>
-  
-  <!-- EPDM ELASTIC RIB (1mm compressed to 0.7mm) -->
-  <path d="M 520 160 L 530 160.5 L 530 439.5 L 520 440 Z" fill="url(#epdm-hatch)" stroke="black" stroke-width="0.3"/>
-  
-  <!-- Spring pin hole -->
-  <line x1="520" y1="295" x2="520" y2="305" stroke="black" stroke-width="0.3" stroke-dasharray="2,1"/>
-  
-  <!-- SPRING PIN (LOCKED POSITION) - 0.6mm diameter -->
-  <rect x="280" y="297" width="240" height="6" fill="url(#pin-hatch)" stroke="black" stroke-width="0.3"/>
-  <!-- Pin head protrusion -->
-  <circle cx="280" cy="300" r="2" fill="url(#pin-hatch)" stroke="black" stroke-width="0.3"/>
-  
-  <!-- DIMENSION LINES -->
-  <!-- Taper angle dimension -->
-  <line x1="685" y1="157.86" x2="685" y2="442.14" stroke="black" stroke-width="0.2"/>
-  <line x1="685" y1="157.86" x2="710" y2="157.86" stroke="black" stroke-width="0.2"/>
-  <line x1="685" y1="442.14" x2="710" y2="442.14" stroke="black" stroke-width="0.2"/>
-  <text x="725" y="300" font-family="Times New Roman" font-size="10" text-anchor="start">1.5°</text>
-  
-  <!-- TFE seal thickness dimension -->
-  <line x1="315" y1="190" x2="325" y2="190" stroke="black" stroke-width="0.2"/>
-  <line x1="315" y1="190" x2="315" y2="185" stroke="black" stroke-width="0.2"/>
-  <line x1="325" y1="190" x2="325" y2="185" stroke="black" stroke-width="0.2"/>
-  <text x="320" y="180" font-family="Times New Roman" font-size="9" text-anchor="middle">0.5mm</text>
-  
-  <!-- EPDM thickness dimension (compressed) -->
-  <line x1="510" y1="200" x2="510" y2="207" stroke="black" stroke-width="0.2"/>
-  <line x1="505" y1="200" x2="510" y2="200" stroke="black" stroke-width="0.2"/>
-  <line x1="505" y1="207" x2="510" y2="207" stroke="black" stroke-width="0.2"/>
-  <text x="495" y="204" font-family="Times New Roman" font-size="9" text-anchor="end">0.7mm</text>
-  
-  <!-- Pin diameter dimension -->
-  <line x1="400" y1="290" x2="400" y2="297" stroke="black" stroke-width="0.2"/>
-  <line x1="395" y1="290" x2="400" y2="290" stroke="black" stroke-width="0.2"/>
-  <line x1="395" y1="297" x2="400" y2="297" stroke="black" stroke-width="0.2"/>
-  <text x="385" y="294" font-family="Times New Roman" font-size="9" text-anchor="end">0.6mm</text>
-  
-  <!-- LABELS -->
-  <text x="200" y="120" font-family="Times New Roman" font-size="11" font-weight="bold" text-anchor="middle">FEMALE SLOT COMPONENT</text>
-  <text x="600" y="120" font-family="Times New Roman" font-size="11" font-weight="bold" text-anchor="middle">MALE DOVETAIL COMPONENT</text>
-  <text x="295" y="170" font-family="Times New Roman" font-size="9" font-style="italic">TFE LABYRINTH SEAL</text>
-  <text x="525" y="155" font-family="Times New Roman" font-size="9" font-style="italic">EPDM ELASTIC RIB</text>
-  <text x="400" y="280" font-family="Times New Roman" font-size="9" font-weight="bold" text-anchor="middle">304-GRADE STAINLESS STEEL SPRING PIN</text>
-  
-  <!-- PERFORMANCE ANNOTATIONS -->
-  <text x="320" y="255" font-family="Times New Roman" font-size="8" fill="black">IP67 WATERPROOF PATH →</text>
-  <text x="500" y="350" font-family="Times New Roman" font-size="8" fill="black">SEISMIC VIBRATION ABSORPTION</text>
-  <text x="400" y="320" font-family="Times New Roman" font-size="8" fill="black">10kN AXIAL / 45kN SHEAR</text>
-  
-  <!-- ALIGNMENT TOLERANCE ZONE -->
-  <line x1="278" y1="290" x2="278" y2="310" stroke="black" stroke-width="0.2" stroke-dasharray="1,1"/>
-  <line x1="522" y1="290" x2="522" y2="310" stroke="black" stroke-width="0.2" stroke-dasharray="1,1"/>
-  <text x="400" y="340" font-family="Times New Roman" font-size="8" text-anchor="middle">±1mm ALIGNMENT TOLERANCE</text>
-  
-  <!-- FIGURE TITLE -->
-  <text x="760" y="580" font-family="Times New Roman" font-size="12" font-weight="bold" text-anchor="end">Fig. 2</text>
-  
-  <!-- WATER PATH INDICATION (IP67) -->
-  <path d="M 315 190 Q 305 200 315 210 Q 305 220 315 230" fill="none" stroke="black" stroke-width="0.4" stroke-dasharray="3,2"/>
-  <circle cx="315" cy="190" r="1.5" fill="white" stroke="black" stroke-width="0.3"/>
-  <text x="330" y="195" font-family="Times New Roman" font-size="7">WATER INGRESS BLOCKED</text>
-</svg>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IPO Form 2 - Aguru Manoj Kumar</title>
+    <style>
+        /* IPO Standard Formatting for A4 Paper */
+        @page {
+            size: A4;
+            margin: 0; /* Margins are handled by the container for line numbering alignment */
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #e0e0e0;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 12pt;
+            color: black;
+        }
+
+       .page-container {
+            width: 210mm;
+            min-height: 297mm;
+            margin: 20px auto;
+            background: white;
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
+            /* Statutory Margins: Top: 4cm, Left: 4cm, Bottom: 3cm, Right: 3cm */
+            padding: 4cm 3cm 3cm 4cm; 
+            box-sizing: border-box;
+            position: relative;
+            line-height: 1.5;
+            overflow: hidden;
+        }
+
+        /* Line Numbering Sidebar */
+       .line-numbers {
+            position: absolute;
+            left: 3.2cm; /* Placed in the right half of the left margin */
+            top: 4cm;
+            width: 0.5cm;
+            text-align: right;
+            font-size: 10pt;
+            color: #666;
+            line-height: 1.5; /* Must match content line-height */
+            user-select: none;
+        }
+
+       .line-marker {
+            display: block;
+            height: 1.5em; /* Matches line-height */
+        }
+
+       .content {
+            text-align: justify;
+        }
+
+        /* Styling for Patent Sections */
+       .form-header {
+            text-align: center;
+            font-weight: bold;
+            text-transform: uppercase;
+            margin-bottom: 20px;
+        }
+
+       .section-title {
+            font-weight: bold;
+            text-transform: uppercase;
+            margin-top: 25px;
+            display: block;
+            border-bottom: 1px solid #000;
+            margin-bottom: 10px;
+        }
+
+       .subsection-title {
+            font-weight: bold;
+            margin-top: 15px;
+            display: block;
+        }
+
+       .declaration-box {
+            font-style: italic;
+            margin: 15px 0;
+            padding: 10px;
+            border: 1px solid #ccc;
+        }
+
+       .signature-section {
+            margin-top: 50px;
+            text-align: left;
+        }
+
+       .page-footer {
+            position: absolute;
+            bottom: 1.5cm;
+            left: 0;
+            right: 0;
+            text-align: center;
+            font-size: 11pt;
+        }
+
+        @media print {
+            body { background-color: white; }
+           .page-container {
+                margin: 0;
+                box-shadow: none;
+                width: 100%;
+                height: 100%;
+            }
+           .no-print { display: none; }
+        }
+
+       .no-print-btn {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background: #27ae60;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 1000;
+        }
+    </style>
+</head>
+<body>
+
+<button class="no-print-btn" onclick="window.print()">Print to PDF</button>
+
+<div class="page-container">
+    <div class="line-numbers">
+        <span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker">5</span>
+        <span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker">10</span>
+        <span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker">15</span>
+        <span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker">20</span>
+        <span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker">25</span>
+        <span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker">30</span>
+        <span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker">35</span>
+        <span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker">40</span>
+        <span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker">45</span>
+        <span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker"></span><span class="line-marker">50</span>
+    </div>
+
+    <div class="content">
+        <div class="form-header">
+            FORM 2<br>
+            THE PATENTS ACT, 1970 (39 of 1970)<br>
+            & THE PATENTS RULES, 2003<br><br>
+            PROVISIONAL SPECIFICATION<br>
+            (See section 10 and rule 13)
+        </div>
+
+        <span class="section-title">1. TITLE OF THE INVENTION</span>
+        <p><strong>Modular Agro-Waste Assembly System with Self-Locking Interlock and Zero-Deep Ground Screw Foundation</strong></p>
+
+        <span class="section-title">2. APPLICANT(S)</span>
+        <p>
+            <strong>Name:</strong> AGURU MANOJ KUMAR<br>
+            <strong>Nationality:</strong> Indian<br>
+            <strong>Address:</strong> Plot No. 12-123, Near Kothavalasa Bus Stop, Kothavalasa Village, Parvathipuram Mandal & Town, Parvathipuram Manyam District, Andhra Pradesh – 535501, India
+        </p>
+
+        <span class="section-title">3. STATUTORY DECLARATION</span>
+        <div class="declaration-box">
+            To the best of my knowledge and belief, the information disclosed herein is true, complete, and accurate. No material fact relevant to the invention has been concealed or misrepresented. This specification contains no fabricated data or unvalidated certifications. The invention constitutes a technical mechanical/material construction system and is expressly not a business method or software per se.
+        </div>
+
+        <span class="section-title">4. PREAMBLE</span>
+        <p>The following specification particularly describes the invention and the manner in which it is to be performed.</p>
+
+        <span class="section-title">5. DESCRIPTION</span>
+
+        <span class="subsection-title">FIELD OF THE INVENTION</span>
+        <p>This invention relates to modular prefabricated low-rise residential construction. Specifically, it encompasses zero-deep rapid-install foundation systems, seismic-resistant and waterproof geometric self-locking interlocks for chemically modified agro-waste modules, and geopolymer binder formulations for high-strength composite modules.</p>
+
+        <span class="subsection-title">BACKGROUND OF THE INVENTION</span>
+        <p>Conventional low-rise construction in India faces a 25% national skilled labor shortage and material limitations where raw agro-waste rots within 1–2 years. Existing modular systems exhibit monsoon water ingress and failure under Zone V seismic loads. No prior art discloses the synergistic integration of acetylated agro-waste with proprietary binders and dual-seal interlocks.</p>
+
+        <span class="subsection-title">SUMMARY OF THE INVENTION</span>
+        <p>The invention provides a system comprising (a) Acetylated Agro-Waste Micro-Modules (A²WMM) with a 3.2:1 SiO₂/Al₂O₃ molar ratio binder; (b) a 1.5° Tapered Dovetail Geometric Self-Locking Interlock (GSLI) with TFE labyrinth seals and EPDM elastic ribs; and (c) a Zero-Deep Foundation Rapid Pad (ZFRP) using hot-dip galvanized ground screws.</p>
+
+        <span class="subsection-title">DETAILED DESCRIPTION</span>
+        <p>Chemical acetylation replaces hydroxyl groups in lignocellulosic fibers with acetyl groups, ensuring 50-year durability. The GSLI 1.5° taper angle enables tool-free engagement with under 5kg force. Ground screws are installed using soil-specific torque (60Nm for soft soil) to ensure stability without excavation. The integrated QR-blockchain tracking provides real-time auditing of structural integrity and carbon sequestration.</p>
+
+        <div class="signature-section">
+            <p>Dated this 6th day of February, 2026.</p><br><br>
+            <p>_________________________<br>
+            <strong>AGURU MANOJ KUMAR</strong><br>
+            (Applicant/Inventor)</p>
+        </div>
+    </div>
+    
+    <div class="page-footer">Page 1 of 1</div>
+</div>
+
+</body>
+</html>
